1.21
 * Fix Python 2.3 compatibility (broken in 1.19).
 * Fix many warnings triggered by -3. (#27)
 * mid3v2:
   * Add --TXXX support. (#62, Tim Phipps)
   * Add --POPM support. (#71)
   * Allow setting multiple COMM or TXXX frames with one command line.
 * FLAC:
   * Try to handle corrupt Vorbis comment block sizes. (#52)
   * Don't leak file handle with PyPy (#111, Marien Zwart)
 * ID3:
   * MakeID3v1: Do not generate bad tags when given short dates. (#69)
   * ParseID3v1: Parse short (< 128 byte) tags generated by old Mutagen
     implementations of MakeID3v1, and tags with garbage on the front.
   * pprint: Sort frames by name.
   * Upgrade unknown 2.3 frames (#97, Christoph Reiter)
 * MP3:
   * Fix error when loading extremely small MP3s. (#72)
   * Fix rounding error in CBR length calculation (#93, Christoph Reiter)
 * Use 'open' rather than 'file' everywhere. (#74, Dan Callahan)
 * mid3iconv:
   * Accurately copy QL-style frame encoding behavior. (#75)
   * Skip unopenable files. (#79)
 * ID3FileType:
   * Remember which tag type load() was called with even if the file
     doesn't yet have any ID3 tags. (#89)
 * VComment: Prevent MemoryError when parsing invalid header (#112)
 * ASF: Don't corrupt files on the second save() call (#81, Christoph Reiter)
 * OggTheora: Fix length/bitrate calculation. (#99, Christoph Reiter)
 * MP4:
   * Less strict MP4 covr atom parsing. (#86, Lukáš Lalinský)
   * Support atoms that extend to the end of the file. (#109, Sidnei da Silva)
 * OggOpus support. (#115, Christoph Reiter)
 * Musepack:
   * Fix SV7 bitrate calculation (#7, Christoph Reiter)
   * Support SV8 (#7, Christoph Reiter)

1.20 - 2010.08.04
 * ASF: Don't store blocks over 64K in the MetadataObject block;
   use the MetadataLibraryBlock instead. (#60, Lukáš Lalinský)
 * ID3: Faster parsing of files with lots of padding. (#65, Christoph Reiter)
 * FLAC: Correct check for audio data start. (#67)

1.19 - 2010.02.18
 * ID3: